# 2024-sensory-neuroimaging

./: .gitignore  LICENSE  Makefile  README.md  dirs_decimate_and_SIFTalign.ijm  environment.yml  pyproject.toml
Arduino/Control_LEDs/: Control_LEDs.ino  MR_serial_io.ino
Arduino/Control_LEDs_updated/: IK_Control_LEDs.ino
Python/: DAQ_control.py  MR_test_acquisition.ipynb  acquire_video.ipynb  launch_stim.py
Python/analysis/: cameraLEDsynch.ipynb
Python/utils/: open_file_dialog.py  vidtools.py
analysis_runs/: default_analysis_params.json
code/: parse_csv.py
config/: default.json  default_template.json
envs/: all-dependencies.yml  dev.yml  direct-dependencies.yml  microscope-control.yml
microscope/Arduino/LED_stimulator_control/: LED_stimulator_control.ino
microscope/Python/: launch_stim.py
notebooks/: Motion_Correction.ipynb  analysis.ipynb  arcadia_updated.mplstyle  basic_processing.ipynb  fancy_plot.py  generate_figures.ipynb  injection_analysis.ipynb
pipeline_params/: default_pipeline_params.json
scripts/: parse_csv.py
src/neuroprocessing/: align.py  cli_options.py  figplots.py  imagingtrials.py  parse_csv.py  parse_sync_file.py  pipeline.py  plots_for_pub.py
src/neuroprocessing/plotting/: motion_correction_plots.py
src/neuroprocessing/scripts/: analysis.py  correct_motion.py  motion_correction.py  parse_csv.py  run_analysis.py  run_pipeline.py
src/neuroprocessing/tests/: test_dummy.py
