[project]
name = "neuroprocessing"
description = "Data analysis scripts and notebooks for the translation pilot `Brain imaging of puritogen responses`"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Ryan Lane", email = "ryan.lane@arcadiascience.com" },
  { name = "Ilya Kolb", email = "ilya.kolb@arcadiascience.com" },
  { name = "Michael Reitman", email = "michael.reitman@arcadiascience.com" }
]
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.0",
  "scikit-image==0.22.0",
  "matplotlib==3.8.2"
]

[tool.ruff]
# The directories to consider when resolving first- vs. third-party imports
src = ["."]

line-length = 100
indent-width = 4

# run ruff on jupyter notebooks (this is not enabled by default)
extend-include = ["*.ipynb"]

[tool.ruff.per-file-ignores]
# ignore star and unused imports
"__init__.py" = ["F403", "F405"]

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # pycodestyle error
    "E",
    # pyflakes
    "F",
    # isort
    "I",
    # pyupgrade
    "UP",
    # pycodestyle warning
    "W",
]

# rule codes to ignore
ignore = []

# Allows fix for all enabled rules when `--fix` is provided
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes, indent with spaces, and respect trailing commas
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
order-by-type = true
no-lines-before = ["future", "standard-library"]
